Preserve input types in more functions